--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_native_splash: ^1.3.1
   url_launcher: ^6.0.12
+  http: ^0.13.4
+  provider: ^6.0.1
+  progress_indicators: ^1.0.0
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
