--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
     package="com.example.restaurant_app">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
-        android:label="restaurant_app"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Restaurant App"
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:screenOrientation="portrait"
             android:name=".MainActivity"
