--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,12 +21,20 @@ dependencies:
   provider: ^6.0.1
   progress_indicators: ^1.0.0
   connectivity: ^3.0.6
+  flutter_launcher_icons: ^0.9.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^1.0.0
+
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/splash_img.png"
+
 
 flutter_native_splash:
   color: "#FFFFFF"
