--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.1
   progress_indicators: ^1.0.0
-  connectivity: ^3.0.6
   flutter_launcher_icons: ^0.9.2
+  flutter_offline: ^2.0.0
+  sqflite: ^2.0.0+4
 
 dev_dependencies:
   flutter_test:
