--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   flutter_launcher_icons: ^0.9.2
   flutter_offline: ^2.0.0
   sqflite: ^2.0.0+4
+  rxdart: ^0.27.2
+  intl: ^0.17.0
+  android_alarm_manager: ^2.0.2
+  flutter_local_notifications: ^9.1.2
+  shared_preferences: ^2.0.8
+  mockito: ^5.0.16
 
 dev_dependencies:
   flutter_test:
